--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
         "beyondcode/laravel-websockets": "^1.14",
         "firebase/php-jwt": "^6.10",
         "guzzlehttp/guzzle": "^7.2",
+        "jubaer/zoom-laravel": "^1.3",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "macsidigital/laravel-zoom": "^8.0",
         "predis/predis": "^2.2",
         "pusher/pusher-php-server": "^7.2",
         "twilio/sdk": "^7.13",
